--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,21 @@
 body
 {
-    color: deeppink;
+    color: #333;
     text-align: center;
     font-family: "Arial";
+    font-size: 16 px;
+    }
+
+    #container
+    {
+    width: 70%;
+    padding: 1em;
+    text align: left;
+    border: 1 px solid #000;
+    margin: 0 auto;
+    }
+
+    #container h1
+    {
+        font-size: 20 px;
     }
