--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,22 @@ body
     font-size: 16 px;
     }
 
+    #cabecera
+    {
+        background: #33A;
+        box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
+        color:white;
+        font-weight: bold;
+        margin: 0;
+        padding: 0.5em;
+    }
+
+    #cabecera #tagline
+    {
+        padding: 0 0 0 1em ;
+        font-weight: normal;
+        font-size: 0.8rem;
+    }
     #container
     {
     width: 70%;
