--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,28 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16 px;
+    margin: 0;
+    padding: 0;
     }
 
     #cabecera
     {
-        background: #33A;
-        box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
+        background: #37488b;
+        box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
         color:white;
         font-weight: bold;
         margin: 0;
-        padding: 0.5em;
+        padding: 0.5em 0 0.5em 2em;
+    }
+
+    #cabecera #logo
+    {
+        width: 20 px;
+        vertical-align:middle;
     }
 
     #cabecera #tagline
@@ -25,7 +34,7 @@ body
     #container
     {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text align: left;
     border: 1 px solid #000;
     margin: 0 auto;
@@ -34,4 +43,10 @@ body
     #container h1
     {
         font-size: 20 px;
+    }
+
+    #post
+    {
+        background: white;
+        padding: 1em;
     }
