--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,12 +4,13 @@ body
     text-align: center;
     font-family: "Arial";
     font-size: 16 px;
+    margin: 0;
     }
 
     #cabecera
     {
         background: #33A;
-        box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.5);
+        box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
         color:white;
         font-weight: bold;
         margin: 0;
@@ -25,7 +26,7 @@ body
     #container
     {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text align: left;
     border: 1 px solid #000;
     margin: 0 auto;
@@ -34,4 +35,17 @@ body
     #container h1
     {
         font-size: 20 px;
+    }
+
+    #post
+    {
+        padding: 1em;
+    }
+
+    #footer
+    {
+        background: #777;
+        color: white;
+        text-align: center;
+        padding: 0.5em;
     }
