--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,7 +21,8 @@ body
 
     #cabecera #logo
     {
-        width: 20 px;
+        width: 30 px;
+        height: 30px;
         vertical-align:middle;
     }
 
